--- a/views/beers.hbs
+++ b/views/beers.hbs
@@ -1,9 +1,8 @@
-
 {{#each beers}}
-<div>
-    <img src="{{this.image_url}}" alt="beer">
+  <div>
+    <img src='{{this.image_url}}' alt='beer' />
     <h3>{{this.name}}</h3>
     <h4>{{this.tagline}}</h4>
     <p>{{this.description}}</p>
-</div>
+  </div>
 {{/each}}
