--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,3 +5,93 @@ dark-blue: #0a2c42;
 grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
 */
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  min-height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+nav {
+  background-color: #2081c3;
+  height: 80px;
+  display: flex;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+
+nav a {
+  margin-left: 40px;
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.home img {
+  width: 500px;
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
+
+.btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 190px;
+  height: 50px;
+  background: #2081c3;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  line-height: 25px;
+  margin-top: 30px;
+  box-shadow: 3px 3px 10px black;
+}
+
+footer {
+  background-color: #0a2c42;
+  position: fixed;
+  width: 100%;
+  color: white;
+  height: 80px;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  left: 0;
+  bottom: 0;
+}
+
+.body-hbs {
+  display: flex;
+  justify-content: space-evenly;
+
+  flex-wrap: wrap;
+}
+
+.beer-img {
+  height: 300px;
+}
+
+.eachbeer {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+}
+
+.eachbeer p {
+  text-align: justify;
+}
