--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,19 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang='en'>
+  <head>
+    <meta charset='UTF-8' />
+    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <link rel='stylesheet' href='/stylesheets/styles.css' />
     <title>HBS layout</title>
-</head>
-<body>
+  </head>
+  <body>
 
     <nav>
-        <a href="/">Home</a>
-        <a href="/beers"> Beers</a>
-        <a href="/random-beer">Random Beer</a>
+      <a href='/'>Home</a>
+      <a href='/beers'> Beers</a>
+      <a href='/random-beer'>Random Beer</a>
     </nav>
 
-    {{{body}}}
-</body>
+    <div class="body-hbs">
+
+      {{{body}}}
+      
+    </div>
+
+    <footer>
+      <h3>Develop by Ironhacker Ivan C. 😁​</h3>
+    </footer>
+  </body>
 </html>
