--- a/views/partials/beerpartial.hbs
+++ b/views/partials/beerpartial.hbs
@@ -1,4 +1,5 @@
- <a href="/beers/{{this.id}}"><img src='{{this.image_url}}' alt='beer' /></a>
+
+<a href="/beers/{{this.id}}"><img src='{{this.image_url}}' alt='beer' class="beer-img"/></a>
 <h3>{{this.name}}</h3>
 <h4>{{this.tagline}}</h4>
 <p>{{this.description}}</p>
