--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  min-height: 100%;
+  height: 100%;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -41,8 +41,6 @@ nav a {
 
 .home img {
   width: 500px;
-  margin-top: 50px;
-  margin-bottom: 30px;
 }
 
 .btn {
@@ -62,22 +60,33 @@ nav a {
 
 footer {
   background-color: #0a2c42;
-  position: fixed;
   width: 100%;
+  position: fixed;
   color: white;
-  height: 80px;
-  z-index: 10;
+  height: 75px;
   display: flex;
   align-items: center;
   left: 0;
   bottom: 0;
+  
+}
+
+footer h3 {
+    position: relative;
+    left: 3%;
 }
 
 .body-hbs {
   display: flex;
   justify-content: space-evenly;
-
   flex-wrap: wrap;
+  position: relative;
+  top: 5%;
+  padding-bottom: 100px;
+}
+
+.body-hbs h4 {
+    color: #bfbfbf;
 }
 
 .beer-img {
@@ -89,9 +98,19 @@ footer {
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
-  width: 500px;
+  width: 600px;
 }
 
 .eachbeer p {
   text-align: justify;
+}
+
+.beerapi {
+    display: flex;
+    flex-direction: column;
+    width: 800px;
+}
+
+.random-beer {
+    width: 1200px;
 }
