--- a/views/random-beer.hbs
+++ b/views/random-beer.hbs
@@ -1,8 +1,8 @@
-<div>
+<div class="random-beer">
     
     {{>beerpartial beer}}
 
-    <ul><h4>Food Pairing</h4>
+    <ul><h3>Food Pairing</h3>
       {{#each beer.food_pairing}}
         <li>{{this}}</li>
       {{/each}}
